page 3 of EPAM site completed; header overhauled due to scaling issues on mobile devices; (Text apparently just doesn't scale, so forget it.)

--- a/wdd130_webpages/personal-site/styles/style.css
+++ b/wdd130_webpages/personal-site/styles/style.css
@@ -10,10 +10,11 @@ body{
 
 header {
     display: grid;
-    grid-template-columns: 200px auto;
+    grid-template-columns: 1fr 3fr;
     background-color: white;
 }
 nav {
+
     display: flex;
     align-items: center;
     justify-content: stretch;
@@ -35,7 +36,19 @@ nav a {
     height: 75%;
     width: 30%;
     align-self: center;
-    padding: 50px;
+    /* padding: 50px; */
+}
+
+nav a:nth-of-type(1){
+    columns: 2/3;
+}
+
+nav a:nth-of-type(2){
+    columns: 3/4;
+}
+
+nav a:nth-of-type(3){
+    columns: 4/5;
 }
 
 nav a:hover {
@@ -50,15 +63,17 @@ nav a:hover {
 }
 
 .logo {
-    width: 200px;
+    width: 100%;
+    max-height: 200px;
+    /* width: 200px; */
     padding-right: 10px;
 }  
 
 #content{
+    /* max-width: 100%; */
     max-width: 1300px;
     margin: 0 auto;
 }
-
 
 
 #article-grid{
@@ -70,6 +85,12 @@ nav a:hover {
     justify-items: center;
     padding-left: 2%;
     padding-right: 2%;
+}
+
+hr {
+    height: 3px;
+    margin: 35px 0;
+    background: #28B5A2ff;
 }
 
 .article-card{
@@ -149,10 +170,30 @@ footer .social img {
     width: 100%;
 }
 
+.button-grid{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+}
+
+.button-grid p{
+    grid-column: 1/4;
+    text-align: center;
+}
+
 .button-box{
-    display: flexbox;
-    justify-content: center;
-    font-size: 18px;
+    grid-row: 2;
+    grid-column: 1/4;
+    background-color: #04AA6D; /* Green */
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 0 auto;
+    align-self: center;
+    width: fit-content;
 }
 
 /* Gallery Slideshow from W3 Schools */
@@ -163,7 +204,7 @@ footer .social img {
   /* Position the image container (needed to position the left and right arrows) */
   .container {
     position: relative;
-    padding-top: 50px;
+    padding-top: 5px;
     padding-right: 10%;
     padding-left: 10%;
   }
@@ -186,7 +227,7 @@ footer .social img {
     top: 40%;
     width: auto;
     padding-left: 10px;
-    margin-top: -30px;
+    margin-top: -100px;
     color: white;
     font-weight: bold;
     font-size: 20px;
@@ -210,9 +251,9 @@ footer .social img {
   
   /* Number text (1/3 etc) */
   .numbertext {
-    color: #f2f2f2;
-    font-size: 12px;
-    padding: 8px 12px;
+    color: white;
+    font-size: 18px;
+    padding: 5px 12px;
     position: absolute;
     top: 0;
   }
@@ -247,3 +288,43 @@ footer .social img {
   .demo:hover {
     opacity: 1;
   }
+
+/* Page 3 - Petition Specific CSS */
+
+.petition{
+    display: grid; 
+    grid-template-columns: 1fr 1fr 1fr; 
+    grid-template-rows: auto auto; 
+    justify-items: center; 
+    align-items: start; 
+    gap: 20px;
+}
+
+.petition p:nth-of-type(3) {
+    text-align: center;
+}
+
+#form-grid{
+    grid-row: 1;
+    grid-column: 1 / 4;
+    justify-self: center;
+    column-gap: 20px;
+}
+
+.stat-image{
+    grid-row: 2; 
+    grid-column: 2 / 4; 
+    justify-self: center;
+    width: 100%;
+}
+
+#petition-form{
+    width: 100%;
+    padding-top: 50px;
+    grid-row: 2;
+    grid-column: 1 / 2;
+    justify-self: center;
+    align-self: start;
+    text-align: end;
+}
+
